--- a/nlp/admin/web/src/app/entities/entities.component.html
+++ b/nlp/admin/web/src/app/entities/entities.component.html
@@ -26,16 +26,56 @@
 <md-card class="entities">
   <md-card-content>
     <md-card-title>All Entity Types</md-card-title>
-    <md-list>
       <md-chip-list>
         <md-chip *ngFor="let e of state.entityTypes | async"
                  color="primary"
                  [removable]="e.namespace() === state.currentApplication.namespace"
-                 (remove)="deleteEntityType(e)">
+                 (remove)="deleteEntityType(e)"
+                 (click)="selectEntityType(e)">
           {{e.name}}
           <md-icon *ngIf="e.namespace() === state.currentApplication.namespace" mdChipRemove>cancel</md-icon>
         </md-chip>
       </md-chip-list>
-    </md-list>
+  </md-card-content>
+</md-card>
+<md-card class="entities" *ngIf="this.selectedEntityType">
+  <md-card-content>
+    <md-card-title>Predefined values for {{ this.selectedEntityType.name }}</md-card-title>
+      <table md-table [width]="'100%'">
+        <thead md-head>
+          <th md-column [width]="'20%'">Predefined Value</th>
+          <th md-column [width]="'50%'">Synonyms</th>
+          <th md-column [width]="'30%'">Actions</th>
+        </thead>
+        <tbody md-body>
+          <tr *ngFor="let predefinedValue of this.selectedEntityType.predefinedValues">
+            <td>{{ predefinedValue.value }}</td>
+            <td>
+              <md-chip-list>
+                <md-chip *ngFor="let synonym of predefinedValue.synonyms.get(state.currentLocale)"
+                         [removable]="true">
+                  {{ synonym }}
+                  <md-icon mdChipRemove (click)="deleteSynonym(predefinedValue, synonym)">cancel</md-icon>
+                </md-chip>
+              </md-chip-list>
+            </td>
+            <td>
+              <md-input-container>
+                <input mdInput placeholder="Add synonym" #syn (keyup.enter)="createSynonym(predefinedValue, syn.value)">
+              </md-input-container>
+              <button md-raised-button (click)="deletePredefinedValue(predefinedValue.value)" color="warn">Delete Predefined Value</button>
+            </td>
+          </tr>
+          <tr>
+            <td>
+              <md-input-container>
+                <input mdInput placeholder="Add predefined value" #pv (keyup.enter)="createPredefinedValue(pv.value)">
+              </md-input-container>
+            </td>
+            <td></td>
+            <td></td>
+          </tr>
+        </tbody>
+      </table>
   </md-card-content>
 </md-card>
