--- a/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
+++ b/nlp/admin/web/src/app/sentence-analysis/highlight/highlight.component.html
@@ -28,9 +28,9 @@
                               [style.background]="t.color()"
                               [id]="t.index"
                               [md-tooltip]="t.display(sentence, state.user)">{{t.text}}</span></div>
-    <button *ngIf="appConfig.answerToSentenceUrl && isRootSentence()" md-icon-button (click)="answerToSentence()" md-tooltip="Set a custom answer" class="answer-button"><md-icon>question_answer</md-icon></button>
-    <button *ngIf="isRootSentence()" md-icon-button (click)="copyToClipboard()" md-tooltip="Copy sentence to clipboard" class="copy-button"><md-icon>content_copy</md-icon></button>
-    <textarea *ngIf="isRootSentence()" #copy class="copy"></textarea>
+    <button *ngIf="displayActions && appConfig.answerToSentenceUrl && isRootSentence()" md-icon-button (click)="answerToSentence()" md-tooltip="Set a custom answer" class="answer-button"><md-icon>question_answer</md-icon></button>
+    <button *ngIf="displayActions && isRootSentence()" md-icon-button (click)="copyToClipboard()" md-tooltip="Copy sentence to clipboard" class="copy-button"><md-icon>content_copy</md-icon></button>
+    <textarea *ngIf="displayActions && isRootSentence()" #copy class="copy"></textarea>
   </div>
   <div *ngIf="sentence && sentence.getEditedSubEntities().length !== 0" class="sub-entities">
     <div *ngFor="let e of sentence.getEditedSubEntities();let idx = index" [style.padding-left]="leftPadding+'px'">
