#274 fixes bot conf creation
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
@@ -27,7 +27,8 @@
 
   <md-select *ngIf="!configuration._id"
              placeholder="Connector type"
-             [(ngModel)]="configuration.connectorType">
+             [(ngModel)]="configuration.connectorType"
+              (change)="configuration.initConnectorProperties()">
     <md-option *ngFor="let c of connectorTypesAndRestType"
                [value]="c">{{ c.id }}</md-option>
   </md-select>
