#274 bot configurations : server checks
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
@@ -27,8 +27,7 @@
 
   <md-select *ngIf="!configuration._id"
              placeholder="Connector type"
-             [(ngModel)]="configuration.connectorType"
-              (change)="configuration.initConnectorProperties()">
+             [(ngModel)]="configuration.connectorType">
     <md-option *ngFor="let c of connectorTypesAndRestType"
                [value]="c">{{ c.id }}</md-option>
   </md-select>
