--- a/bot/admin/web/src/app/bot/i18n/i18n.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n.component.html
@@ -32,7 +32,7 @@
     <md-option value="validated">Only validated</md-option>
   </md-select>
   <span class="fill-remaining-space"></span>
-  <md-select placeholder="Not used" [(ngModel)]="notUsedFrom"
+  <md-select placeholder="Not used since" [(ngModel)]="notUsedFrom"
              (ngModelChange)="onNotUsedFromChange()">
     <md-option value="-1"></md-option>
     <md-option value="1">last day</md-option>
