#274 fixes bot configuration refresh
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
@@ -67,6 +67,9 @@
       <mat-panel-description>Parameters</mat-panel-description>
     </md-expansion-panel-header>
     <md-input-container>
+      <input mdInput placeholder="Application Id" [(ngModel)]="configuration.parameters['appId']">
+    </md-input-container>
+    <md-input-container>
       <input mdInput placeholder="Page Id" [(ngModel)]="configuration.parameters['pageId']">
     </md-input-container>
     <md-input-container class="long-text">
