fixes #261 sum of label stats is not equals to stats total

--- a/bot/admin/web/src/app/bot/i18n/i18n-label.component.html
+++ b/bot/admin/web/src/app/bot/i18n/i18n-label.component.html
@@ -53,7 +53,7 @@
                 mdInput
                 [(ngModel)]="l.label"
                 (change)="save(i)"
-                [title]="l.stats && l.stats.length !== 0 ? ('used '+ l.stats[0].count +' times, last used ' + (l.stats[0].lastUpdate | amTimeAgo)) : 'No stats'"></textarea>
+                [title]="l.stats && l.stats.length !== 0 ? ('used '+ l.mergedStats().count +' times, last used ' + (l.mergedStats().lastUpdate | amTimeAgo)) : 'No stats'"></textarea>
     </div>
 
     <div class="i18n-label__entry__alternative-management">
