resolves #294 add not understood sentence count in admin interface
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.css
+++ b/nlp/admin/web/src/app/sentences-scroll/sentences-scroll.component.css
@@ -64,6 +64,9 @@
 .mat-column-usageCount {
   max-width: 48px;
 }
+.mat-column-unknownCount {
+  max-width: 48px;
+}
 .mat-column-lastUpdate {
   max-width: 128px;
 }
