resolves #301 bot test: add locale & nlp stats info
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.css
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.css
@@ -1,3 +1,10 @@
 .input-text {
   width: 400px;
 }
+
+.stats {
+  font-size: xx-small;
+  float: left;
+  margin-right: 20px;
+  margin-top:-12px;
+}
