--- a/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
+++ b/bot/admin/web/src/app/test/dialog/bot-dialog.component.html
@@ -30,6 +30,10 @@
               &nbsp;
             </td>
             <td *ngIf="!m.bot" style="min-width: 200px">
+              <span *ngIf="m.locale" class="stats">
+                [{{m.locale}}]
+                <button *ngIf="m.hasNlpStats" md-icon-button (click)="displayNlpStats(m)" md-tooltip="View Nlp Stats" color="primary"><md-icon>visibility</md-icon></button>
+              </span>
               <tock-bot-message [message]="m.message" (user)="true"></tock-bot-message>
             </td>
             <td style="width:30px"></td>
