resolves #304 SimpleAnswer configurations use intent i18n category
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/intent/search-bot-intent.component.html
+++ b/bot/admin/web/src/app/bot/intent/search-bot-intent.component.html
@@ -42,7 +42,7 @@
   </md-card-content>
   <md-card-actions>
     <button md-button (click)="delete(intent)" color="warn">Delete</button>
-    <button md-raised-button (click)="update(intent)" color="primary">Update</button>
+    <button *ngIf="!intent.storyDefinition.isSimpleAnswer()" md-raised-button (click)="update(intent)" color="primary">Update</button>
   </md-card-actions>
 </md-card>
 </span>
