#310 ff: fix category display
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/bot/admin/web/src/app/bot/feature/feature.component.css
+++ b/bot/admin/web/src/app/bot/feature/feature.component.css
@@ -32,8 +32,8 @@
 
 .category {
   float: left;
-  width:300px;
-  font-size: smaller;
+  width:400px;
+  font-size: xx-small;
   line-height: 36px;
 }
 
